--- a/package.json
+++ b/package.json
@@ -5,19 +5,37 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@popperjs/core": "^2.11.0",
+    "@react-three/fiber": "^7.0.6",
+    "@types/node": "^17.0.7",
+    "@types/react": "^17.0.38",
+    "bootstrap": "^5.1.3",
+    "esm": "^3.2.25",
     "gatsby": "^4.4.0",
     "gatsby-plugin-gatsby-cloud": "^4.4.0",
     "gatsby-plugin-image": "^2.4.0",
     "gatsby-plugin-manifest": "^4.4.0",
     "gatsby-plugin-offline": "^5.4.0",
     "gatsby-plugin-react-helmet": "^5.4.0",
+    "gatsby-plugin-sass": "^5.4.0",
     "gatsby-plugin-sharp": "^4.4.0",
+    "gatsby-plugin-typescript": "^4.4.0",
     "gatsby-source-filesystem": "^4.4.0",
     "gatsby-transformer-sharp": "^4.4.0",
+    "jquery": "^3.6.0",
+    "postprocessing": "^6.22.5",
     "prop-types": "^15.8.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-ga": "^3.3.0",
+    "react-helmet": "^6.1.0",
+    "react-player": "^2.9.0",
+    "react-router-dom": "^6.2.1",
+    "sass": "^1.45.2",
+    "three": "^0.128.0",
+    "three-gltf-loader": "^1.111.0",
+    "vimeo": "^2.1.1"
   },
   "devDependencies": {
     "prettier": "^2.5.1"
