--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,14 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: '14.x'
-    
-    - run: |
+
+    - name: building
+    env:
+        VIMEO_ACCESS_TOKEN: ${{ secrets.VIMEO_ACCESS_TOKEN }}
+        VIMEO_CLIENT_ID: ${{ secrets.VIMEO_CLIENT_ID }}
+        VIMEO_CLIENT_SECRET: ${{ secrets.VIMEO_CLIENT_SECRET }}
+        VIMEO_CLIENT_PATH: ${{ secrets.VIMEO_CLIENT_PATH }}
+    run: |
         npm ci
         npm run build
         
