--- a/.github/workflows/prod_build.yml
+++ b/.github/workflows/prod_build.yml
@@ -4,10 +4,10 @@ name: Prod Site build
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
-  repository_dispatch:
-    types: [build]
+#  pull_request:
+#    branches: [ main ]
+#  repository_dispatch:
+#    types: [build]
 
 # build process
 jobs:
