--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
           npm run build
         
     - name: 📂 Sync files
-      uses: SamKirkland/FTP-Deploy-Action@4.3.0
+      uses: SamKirkland/FTP-Deploy-Action/tree/v4.3.0-beta@4.3.0
       with:
         server: ${{ secrets.FTP_URI }} 
         username: ${{ secrets.DEV_USER_ID }}
